# fastapi_production_template

./: Dockerfile.prod  README.md  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
src/: config.py  database.py  main.py
