[project]
name = "fastapi-production-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.112.1",
    "sqlalchemy>=2.0.32",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "async-timeout>=4.0.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.4.0",
    "ruff>=0.6.2",
    "sentry-sdk>=2.13.0",
    "python-json-logger>=2.0.7",
    "uvicorn>=0.30.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
